	PR c/41182 	* c-common.c (c_fully_fold_internal): Strip nops from the result 	of recursive calls to c_fully_fold_internal. 	(c_wrap_maybe_const): New. 	(c_save_expr): Use c_wrap_maybe_const. 	* c-common.h (c_wrap_maybe_const): Declare. 	* c-typeck.c (build_conditional_expr, c_finish_stmt_expr, 	build_binary_op): Use c_wrap_maybe_const.

testsuite:
	* gcc.c-torture/compile/pr41182-1.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@152548 138bc75d-0d04-0410-961f-82ee72b054a4